# era5_grib_parallel

./: .gitignore  pyproject.toml
.conda/: env_dev.yml
.github/workflows/: CD.yml  CI.yml
src/: cdo_era5grib.py  nci_era5grib_parallel.py
src/era5grib_parallel/: __init__.py  cdo_era5grib.py  nci_era5grib_parallel.py
